@@ -5,7 +5,7 @@ import (
 	"github.com/BurntSushi/toml"
 	"io/ioutil"
 	"log"
-	// "os"
+	"os"
 )
 
 type twitmaConfig struct {
@@ -35,38 +35,6 @@ type twitmaConfig struct {
 	}
 }
 
-func loadConfig(path string) (*twitmaConfig, error) {
-	var config *twitmaConfig
-
-	_, err := toml.DecodeFile(path, &config)
-
-	return config, err
-}
-
-func loadIds(path string) ([]string, error) {
-	var ids []string
-
-	jsonBlob, err := ioutil.ReadFile(path)
-	if err != nil {
-		log.Fatal(err)
-	}
-
-	err = json.Unmarshal(jsonBlob, &ids)
-
-	return ids, err
-}
-
-// func exists(path string) (bool, error) {
-// 	_, err := os.Stat(path)
-// 	if err == nil {
-// 		return true, nil
-// 	}
-// 	if os.IsNotExist(err) {
-// 		return false, nil
-// 	}
-// 	return true, err
-// }
-
 func main() {
 	config, err := loadConfig(".twitmarc.toml")
 	if err != nil {
@@ -78,5 +46,56 @@ func main() {
 		log.Fatal(err)
 	}
 
-	print(ids[0])
+	if len(ids) > 0 {
+		print(ids[0])
+	} else {
+		print("Have no ids(")
+	}
+}
+
+func loadConfig(path string) (*twitmaConfig, error) {
+	var config *twitmaConfig
+
+	_, err := toml.DecodeFile(path, &config)
+
+	return config, err
+}
+
+func loadIds(path string) ([]string, error) {
+	var ids []string
+
+	pathExists, err := pathExists(path)
+	if err != nil {
+		log.Fatal(err)
+	}
+
+	var jsonBlob []byte
+	if pathExists {
+		jsonBlob, err = ioutil.ReadFile(path)
+		if err != nil {
+			log.Fatal(err)
+		}
+	} else {
+		jsonBlob = []byte(`[]`)
+		// prettyJsonBlob, err := json.MarshalIndent(jsonBlob, "", "    ")
+		// if err != nil {
+		// 	log.Fatal(err)
+		// }
+		ioutil.WriteFile(path, jsonBlob, 0644)
+	}
+
+	err = json.Unmarshal(jsonBlob, &ids)
+
+	return ids, err
+}
+
+func pathExists(path string) (bool, error) {
+	_, err := os.Stat(path)
+	if err == nil {
+		return true, nil
+	}
+	if os.IsNotExist(err) {
+		return false, nil
+	}
+	return true, err
 }
