@@ -1,3 +1,7 @@
+2015-11-19  Danil Kutkevich  <danil@kutkevich.org>
+
+        * twitma.go (loadIds): Create json file if not exist.
+
 2015-11-16  Danil Kutkevich  <danil@kutkevich.org>
 
         * twitma.go (twitmaConfig): Add `twitmaConfig` struct.
